<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<resources>
    <string name="app_name">Show me the Cook</string>
    <string name="menu_settings">Settings</string>

    <!-- content description -->
    <string name="content_description_empty" translatable="false">" "</string>

    <string-array name="viewpager_tabs" translatable="false">
        <item>최신</item>
        <item>인기</item>
        <item>한식</item>
        <item>중식</item>
        <item>양식</item>
        <item>일식</item>
        <item>유럽식</item>
    </string-array>

    <string-array name="tabs" translatable="false">
        <item>Latest</item>
        <item>Popular</item>
        <item>한식</item>
        <item>중식</item>
        <item>양식</item>
        <item>일식</item>
        <item>유럽식</item>
    </string-array>

    <string-array name="food_spinner">
        <item>한식</item>
        <item>중식</item>
        <item>양식</item>
        <item>일식</item>
        <item>유럽식</item>
    </string-array>

    <string-array name="gender_spinner">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="editor_title_hint">Insert title</string>
    <string name="new_edit">new post</string>
    <string name="submit">submit</string>
    <string name="editor_hint">Insert</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="content_hint">Insert contents.</string>

    <!-- Log In-->
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google_plus">Login with Google +</string>
    <string name="login_with_kakao">Login with Kakao</string>
    <string name="logout">Log Out</string>
    <string name="logout_done">You have been Log Out</string>

    <string name="save">저장 되었습니다.</string>
    <string name="failsave">저장에 실패 하였습니다. </string>

    <string name="delete_success">삭제 되었습니다.</string>
    <string name="delete_fail">삭제에 실패 하였습니다. </string>

    <string name="score">SCORE</string>
    <string name="ranking">RANK.</string>

    <string name="share">Share</string>
    <string name="content_share">Content to share</string>
    <string name="pick_file">Pick a file</string>

    <string name="attachment_much_long">Attachment is much long, max size is 12mb</string>
    <string name="need_facebook_app">You need native facebook app to perform this action</string>

    <string name="search_hint">검색할 제목을 입력하세요.</string>
    <string name="editor_exit">작성을 취소하시겠습니까?\n작성중인 글은 저장되지 않습니다.</string>
    <string name="editor_exit_title">작성 취소</string>

    <string name="push_agree">Show me the Cook 푸쉬 알림에 동의하시겠습니까?</string>
    <string name="push_agree_title">푸쉬 알림</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>

    <!--gcm-->
    <string name="gcm_sender_id" translatable="false">1060290681419</string>
    <string name="gcm_server_api_key" translatable="false">AIzaSyArwTyrB6Je2H282zBGqqgrwOtS0VdT8K0</string>
    <!--gcm-->

    <!-- profile -->
    <string name="profile">Profile</string>
    <string name="profile_id">ID</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_score">Score</string>
    <string name="profile_intro">Intro</string>
    <string name="profile_intro_text_hint">insert text</string>
    <string name="edit">edit</string>
    <string name="no_changes">There are no changes.</string>

    <!--search-->
    <string name="no_search_data">There\'s no result.</string>

    <!--error toast-->
    <string name="network_problem">occured network problem. Please try again.</string>
    <string name="capture_error">fail to capture. Please try again.</string>
    <string name="crop_error">fail to crop. Please try again.</string>

    <!--delete post-->
    <string name="delete_post">Do you wanna delete this post?\nWe can\'t rollback this execution.</string>
    <string name="delete_post_title">Delete post</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--floating menu-->
    <string name="home">Home</string>
    <string name="new_post">New post</string>
    <string name="my_post">My post</string>
    <string name="my_like">My like</string>
    <string name="notics">Notice</string>

    <!--user information dialog-->
    <string name="user_info">User Information</string>
    <string name="goto_user_profile">User Profile</string>
    <string name="goto_user_post">User Posts</string>

    <!--loading progress dialog-->
    <string name="loading">Loading ...</string>

    <!--카카오톡-->
    <string name="move">move</string>
    <string name="post_upload_comment">move to KakaoStroy now?</string>
    <!--카카오톡-->
    <string name="kakao_app_key" translatable="false">3bc7bdc790ca740b5dc258490dce57d2</string>

    <string name="kakao_scheme" translatable="false">kakao3bc7bdc790ca740b5dc258490dce57d2</string>
    <string name="kakaotalk_host" translatable="false">kakotalk</string>
    <string name="kakaostory_host" translatable="false">kakaostory</string>

    <!--change profile image dialog-->
    <string name="change_image_action">Change profile image</string>
    <string name="capture_image">Capture Image</string>
    <string name="select_image">Select Image</string>

    <string name="share_facebook">facebook</string>
    <string name="share_kakaostory">kakao story</string>
    <string name="share_etc">etc</string>
    <string name="other_profile">\'s posts</string>

    <!-- custom :: swiperefreshlayout -->
    <string name="swipe_refresh_state_ready">Pull down to update</string>
    <string name="swipe_refresh_state_release">Let go to update</string>
    <string name="swipe_refresh_state_refresh">Updating ...</string>
    <string name="swipe_refresh_state_refresh_complete">Update complete</string>
</resources>