<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/profile_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nest_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mustard_op20"
            android:minHeight="@dimen/profile_nested_scroll_view_min_height"
            android:paddingBottom="@dimen/profile_nest_view_padding_bottom"
            android:paddingLeft="@dimen/profile_nest_view_padding_left"
            android:paddingRight="@dimen/profile_nest_view_padding_right"
            android:paddingTop="@dimen/profile_nest_view_padding_top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_user_info_bg"
                android:orientation="vertical"
                android:padding="@dimen/profile_bg_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivPicture"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/profile_picture_margin_right"
                        android:src="@drawable/person"
                        app:border_color="@color/md_blue_200"
                        app:border_width="2dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical">

                        <!-- Name -->
                        <TextView
                            android:id="@+id/textViewNameLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_gravity="bottom"
                            android:text="@string/profile_name"
                            android:textColor="@color/md_grey_500"
                            android:textSize="@dimen/profile_item_text_size" />

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/textViewNameValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginLeft="@dimen/profile_item_edit_margin_left"
                            android:layout_marginRight="@dimen/profile_item_edit_margin_right"
                            android:gravity="center_vertical"
                            android:hint="@string/editor_hint"
                            android:singleLine="true"
                            android:textSize="@dimen/profile_item_edit_text_size"
                            app:met_maxCharacters="@integer/server_define_user_name"/>
                    </LinearLayout>
                </LinearLayout>

                <!-- e mail -->
                <TextView
                    android:id="@+id/textViewEmailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/profile_email"
                    android:textColor="@color/md_grey_500"
                    android:textSize="@dimen/profile_item_text_size" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/textViewEmailValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="@dimen/profile_item_edit_margin_left"
                    android:layout_marginRight="@dimen/profile_item_edit_margin_right"
                    android:ems="10"
                    android:hint="@string/editor_hint"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textSize="@dimen/profile_item_edit_text_size"
                    app:met_maxCharacters="@integer/server_define_user_email"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:id="@+id/textViewGenderLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/profile_gender"
                        android:textColor="@color/md_grey_500"
                        android:textSize="@dimen/profile_item_text_size" />


                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/textViewGenderValue"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="@dimen/profile_item_edit_margin_left"
                        android:layout_marginRight="@dimen/profile_item_edit_margin_right"
                        android:hint="Gender"
                        app:met_floatingLabel="normal" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:id="@+id/textViewScoreLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/profile_score"
                        android:textColor="@color/md_grey_500"
                        android:textSize="@dimen/profile_item_text_size" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/textViewScoreLabelValue"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="@dimen/profile_item_edit_margin_left"
                        android:layout_marginRight="@dimen/profile_item_edit_margin_right"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="none"
                        android:singleLine="true"
                        android:text="0점"
                        android:textSize="@dimen/profile_item_edit_text_size"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/textviewIntroLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewScoreLabel"
                    android:singleLine="true"
                    android:text="@string/profile_intro"
                    android:textColor="@color/md_grey_500"
                    android:textSize="@dimen/profile_item_text_size" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/textviewIntroLabelValue"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@+id/textviewIntroLabel"
                    android:layout_marginLeft="@dimen/profile_item_edit_margin_left"
                    android:layout_marginRight="@dimen/profile_item_edit_margin_right"
                    android:background="@drawable/edit_box_background"
                    android:cursorVisible="true"
                    android:fadeScrollbars="true"
                    android:gravity="top"
                    android:hint="@string/profile_intro_text_hint"
                    android:singleLine="false"
                    android:textSize="@dimen/profile_item_edit_text_size"
                    app:met_maxCharacters="@integer/server_define_user_intro"/>
            </LinearLayout>
        </FrameLayout>
    </android.support.v4.widget.NestedScrollView>

    <!--<android.support.design.widget.FloatingActionButton-->
    <!--android:id="@+id/profile_fab"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="end|bottom"-->
    <!--android:layout_margin="@dimen/fab_margin"-->
    <!--android:src="@drawable/ic_edit" />-->

</android.support.design.widget.CoordinatorLayout>